# physis-orrery

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README  README.md  package.json  tsconfig.eligibility.json  tsconfig.json
.github/: SECURITY.md
configs/: devnet.json  localnet.json  mainnet.json
docs/: DEPLOYMENT_NOTES.md  PHYSIS_EPOCH_REGISTRY.md  PROGRAM_ORDER.md  PROGRAM_REGISTRY.md
idls/: physis_epoch_registry.json
metadata/: security.json
programs/physis_eligibility_registry/: Cargo.toml
programs/physis_eligibility_registry/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/physis_eligibility_registry/src/instructions/: disable_eligibility_class.rs  disable_issuer_grant.rs  expire_eligibility_record.rs  expire_eligibility_record_by_issuer.rs  initialize_registry.rs  mod.rs  pause_registry.rs  resume_registry.rs  revoke_eligibility_record.rs  suspend_eligibility_record.rs  suspend_eligibility_record_by_issuer.rs  transfer_registry_authority.rs  upsert_eligibility_class.rs  upsert_eligibility_record.rs  upsert_eligibility_record_by_authority.rs  upsert_eligibility_record_by_issuer.rs  upsert_issuer_grant.rs
programs/physis_eligibility_registry/src/utils/: checkpoints.rs  mod.rs  subject.rs
programs/physis_epoch_registry/: Cargo.toml
programs/physis_epoch_registry/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/physis_epoch_registry/src/instructions/: activate_epoch.rs  close_epoch.rs  initialize_registry.rs  mod.rs  pause_registry.rs  register_epoch.rs  resume_registry.rs
programs/physis_epoch_registry/src/utils/: time.rs
tests/: persona-attestation.spec.ts  persona-sync-policy.spec.ts  physis_eligibility_registry.authority.spec.ts  physis_eligibility_registry.binding.spec.ts  physis_eligibility_registry.class-invariants.spec.ts  physis_eligibility_registry.delegated-lifecycle.spec.ts  physis_eligibility_registry.delegated-upsert.spec.ts  physis_eligibility_registry.events.spec.ts  physis_eligibility_registry.hardening.spec.ts  physis_eligibility_registry.issuer-grant.spec.ts  physis_eligibility_registry.pause.spec.ts  physis_eligibility_registry.record-policy.spec.ts  physis_eligibility_registry.root-authority-upsert.spec.ts  physis_eligibility_registry.spec.ts  physis_eligibility_registry.transitions.spec.ts  physis_eligibility_registry.upsert-status.spec.ts  (+3 more)
(+32 files in other folders)
