[workspace]
members = [
  "programs/physis_epoch_registry",
  "programs/physis_eligibility_registry"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "1.1.2"

[workspace.metadata.cli]
solana = "4.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
