[package]
name = "physis_eligibility_registry"
version = "0.1.0"
description = "Orrery: Physis Eligibility Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "physis_eligibility_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

# Declared to satisfy Rust check-cfg warnings emitted through Anchor/Solana macros.
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
solana-security-txt = "1.1.3"
